--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,9 @@ html {
 body {
     margin: 0;
 }
+
+.img-container {
+    margin: 4.8rem 0 6.4rem 0;
+    display: flex;
+    justify-content: center;
+}
