--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
+/**********************************
+*   Colors and fonts
+**********************************/
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+
+:root {
+    --slate-900: hsl(240, 21%, 20%);
+}
+
+
+/**********************************
+*   Reusable components
+**********************************/
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+}
+
+.text-preset-1 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: 0px;
+    text-align: center;
+    font-family: "Red Hat Display", sans-serif;
+    color: var(--slate-900);
+}
+
+/**********************************
+*   Generic CSS
+**********************************/
+
 html {
     box-sizing: border-box;
     font-size: 62.5%;
@@ -7,8 +40,20 @@ body {
     margin: 0;
 }
 
-.img-container {
+#logo-container {
     margin: 4.8rem 0 6.4rem 0;
-    display: flex;
-    justify-content: center;
 }
+
+.hero-image {
+    height: 16.0rem;
+    width: auto;
+}
+
+.hero-right {
+    display: none;
+}
+
+#content {
+    margin: 4.8rem 3.5rem 6.4rem 3.5rem;
+}
+
