main text and buttons

--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root {
+    --white: hsl(0, 0%, 98%);
+    --cyan-hover: hsl(192, 54%, 64%);
+    --cyan-300: hsl(192, 90%, 77%);
+    --cyan-600: hsl(192, 37%, 48%);
+    --purple-hover: hsl(268, 55%, 71%);
+    --purple-300: hsl(268, 100%, 86%);
+    --purple-600: hsl(268, 34%, 53%);
+    --slate-600: hsl(240, 10%, 57%);
     --slate-900: hsl(240, 21%, 20%);
 }
-
 
 /**********************************
 *   Reusable components
 **********************************/
 
-.flex-container {
+.flex {
     display: flex;
     justify-content: center;
 }
 
-.text-preset-1 {
+.header-text {
     font-size: 4rem;
     font-weight: 700;
     line-height: 110%;
-    letter-spacing: 0px;
-    text-align: center;
-    font-family: "Red Hat Display", sans-serif;
     color: var(--slate-900);
+}
+
+.mt24 {
+    margin-top: 2.4rem;
+}
+
+.mb16 {
+    margin-bottom: 1.6rem;
+}
+
+.mb24 {
+    margin-bottom: 2.4rem;
+}
+
+.btn {
+    font-size: 1.6rem;
+    font-weight: 600;
+    border-radius: 29px;
+    border: none;
+    width: 19.3rem;
+    height: 5.6rem;
+    color: var(--white);
+}
+
+.btn-cyan {
+    background: var(--cyan-600);
+}
+
+.btn-purple {
+    background: var(--purple-600);
+}
+
+.btn-small {
+    width: 16.1rem;
 }
 
 /**********************************
@@ -38,6 +76,14 @@ html {
 
 body {
     margin: 0;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: 0px;
+    text-align: center;
+    font-family: "Red Hat Display", sans-serif;
+    color: var(--slate-600);
+    background: var(--white);
 }
 
 #logo-container {
@@ -55,5 +101,22 @@ body {
 
 #content {
     margin: 4.8rem 3.5rem 6.4rem 3.5rem;
+}
+
+.btn-container {
+    flex-direction: column;
+    align-items: center;
+}
+
+.btn-cyan:hover {
+    background: var(--cyan-hover);
+}
+
+.btn-cyan span {
+    color: var(--cyan-300);
+}
+
+.btn-purple:hover {
+    background: var(--purple-hover);
 }
 
