--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,6 @@ body {
 #img-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    /* justify-items: center; */
     gap: 1.6rem;
 }
 
@@ -167,3 +166,13 @@ body {
     height: 14.4rem;
     border-radius: 10px;
 }
+
+#statement {
+    color: var(--cyan-600);
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+}
+
