--- a/css/style.css
+++ b/css/style.css
@@ -25,23 +25,30 @@
     justify-content: center;
 }
 
-.header-text {
-    font-size: 4rem;
+.header {
     font-weight: 700;
     line-height: 110%;
     color: var(--slate-900);
-}
-
-.mt24 {
-    margin-top: 2.4rem;
 }
 
 .mb16 {
     margin-bottom: 1.6rem;
 }
 
+.mt24 {
+    margin-top: 2.4rem;
+}
+
 .mb24 {
     margin-bottom: 2.4rem;
+}
+
+.mt32 {
+    margin-top: 3.2rem;
+}
+
+.mb32 {
+    margin-bottom: 3.2rem;
 }
 
 .mt64 {
@@ -135,6 +142,10 @@ body {
     margin: 4.8rem 3.5rem 6.4rem 3.5rem;
 }
 
+h1 {
+    font-size: 4rem;
+}
+
 .btn-container {
     flex-direction: column;
     align-items: center;
@@ -176,3 +187,6 @@ body {
     text-transform: uppercase;
 }
 
+h2 {
+    font-size: 3.2rem;
+}
